RESOLVED FIXED 43785
[V8] DeviceMotionEvent can not be used from JavaScript
https://bugs.webkit.org/show_bug.cgi?id=43785
Summary [V8] DeviceMotionEvent can not be used from JavaScript
Steve Block
Reported Tuesday, August 10, 2010 1:13:12 PM UTC
This causes fast/dom/DeviceMotion/create-event.html and fast/dom/DeviceMotion/optional-event-properties.html to fail with V8. The cause is that DeviceMotionEvent is not handled in toV8(Event*). This was omitted when the DeviceMotionEvent event was added in Bug 42865
Attachments
Patch (1.58 KB, patch)
2010-08-10 05:21 PDT, Steve Block
jorlow: review+
commit-queue: commit-queue-
Steve Block
Comment 1 Tuesday, August 10, 2010 1:21:44 PM UTC
Jeremy Orlow
Comment 2 Tuesday, August 10, 2010 1:57:33 PM UTC
Comment on attachment 64000 [details] Patch r=me
WebKit Commit Bot
Comment 3 Tuesday, August 10, 2010 2:51:20 PM UTC
Comment on attachment 64000 [details] Patch Rejecting patch 64000 from commit-queue. Failed to run "['WebKitTools/Scripts/run-webkit-tests', '--no-launch-safari', '--exit-after-n-failures=1', '--ignore-tests', 'compositing', '--quiet']" exit_code: 1 Last 500 characters of output: CommitQueue/LayoutTests Testing 20806 test cases. media/video-volume.html -> timed out Sampling process 65677 for 10 seconds with 10 milliseconds of run time between samples Sampling completed, processing symbols... Sample analysis of process 65677 written to file /Users/eseidel/Library/Logs/DumpRenderTree/HangReport.txt Exiting early after 1 failures. 17218 tests run. 807.59s total testing time 17217 test cases (99%) succeeded 1 test case (<1%) timed out 34 test cases (<1%) had stderr output Full output: http://queues.webkit.org/results/3770028
Steve Block
Comment 4 Tuesday, August 10, 2010 3:15:19 PM UTC
WebKit Review Bot
Comment 5 Tuesday, August 10, 2010 5:14:45 PM UTC
Note You need to log in before you can comment on or make changes to this bug.