third_party/WebKit/WebCore/bindings/v8/custom/V8EventCustom.cpp
@@ -41,6 +41,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "V8Clipboard.h"
 #include "V8CompositionEvent.h"
 #include "V8CustomEvent.h"
+#include "V8DeviceMotionEvent.h"
 #include "V8DeviceOrientationEvent.h"
 #include "V8ErrorEvent.h"
 #include "V8IDBErrorEvent.h"
@@ -156,6 +157,8 @@ v8::Handle<v8::Value> toV8(Event* impl)
     if (impl->isBeforeLoadEvent())
         return toV8(static_cast<BeforeLoadEvent*>(impl));
 #if ENABLE(DEVICE_ORIENTATION)
+    if (impl->isDeviceMotionEvent())
+        return toV8(static_cast<DeviceMotionEvent*>(impl));
     if (impl->isDeviceOrientationEvent())
         return toV8(static_cast<DeviceOrientationEvent*>(impl));
 #endif
